--- a/src/main/resources/Fxmls/Cocomo2.fxml
+++ b/src/main/resources/Fxmls/Cocomo2.fxml
@@ -8,58 +8,265 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="classes.ControllerForCocomo2">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="classes.ControllerForCocomo2">
    <children>
-      <Pane prefHeight="86.0" prefWidth="800.0" style="-fx-background-color: green;">
+      <Pane prefHeight="86.0" prefWidth="1100.0" style="-fx-background-color: green;">
          <children>
             <Button fx:id="goToCocomo1Button" layoutX="37.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToCocomo1ButtonPressed" prefHeight="26.0" prefWidth="80.0" style="-fx-background-color: #FF8C00;" text="Cocomo 1" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Button>
-            <Text fill="WHITE" layoutX="316.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cocomo 2" wrappingWidth="167.73675537109375">
+            <Text fill="WHITE" layoutX="472.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cocomo 2" wrappingWidth="167.73675537109375">
                <font>
                   <Font name="System Bold Italic" size="36.0" />
                </font>
             </Text>
          </children>
       </Pane>
-      <Text layoutX="14.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Тип" wrappingWidth="102.13671875">
+      <Text layoutX="484.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Тип" wrappingWidth="102.13671875">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="choiceBox" layoutX="14.0" layoutY="118.0" prefWidth="150.0" />
-      <Text layoutX="199.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Трудомісткість:" wrappingWidth="129.33673095703125">
+      <ChoiceBox fx:id="choiceBox" layoutX="484.0" layoutY="122.0" prefWidth="150.0" />
+      <Text layoutX="181.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Трудомісткість:" wrappingWidth="129.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <Text layoutX="199.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Час розробки:" wrappingWidth="129.33673095703125">
+      <Text layoutX="377.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Час розробки:" wrappingWidth="129.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <Text layoutX="199.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Персонал:" wrappingWidth="129.33673095703125">
+      <Text layoutX="586.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Персонал:" wrappingWidth="129.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <Text layoutX="14.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введіть кількість рядків(KLOC)" wrappingWidth="150.4000000000001">
+      <Text layoutX="484.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введіть кількість рядків(KLOC)" wrappingWidth="150.4000000000001">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="NumForCalcul" layoutX="15.0" layoutY="200.0" />
-      <Button fx:id="Calculate" layoutX="38.0" layoutY="232.0" mnemonicParsing="false" onAction="#calculateButtonPressed" prefHeight="26.0" prefWidth="102.0" text="Вирахувати" />
-      <Text fx:id="txtPM" layoutX="337.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text fx:id="txtTM" layoutX="337.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text fx:id="txtSS" layoutX="337.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text layoutX="199.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Продуктивність:" wrappingWidth="129.33673095703125">
+      <TextField fx:id="NumForCalcul" layoutX="485.0" layoutY="204.0" />
+      <Button fx:id="Calculate" layoutX="508.0" layoutY="236.0" mnemonicParsing="false" onAction="#calculateButtonPressed" prefHeight="26.0" prefWidth="102.0" text="Вирахувати" />
+      <Text fx:id="txtPM" layoutX="308.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="txtTM" layoutX="480.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="txtSS" layoutX="663.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text layoutX="766.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Продуктивність:" wrappingWidth="129.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <Text fx:id="txtP" layoutX="337.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="txtP" layoutX="896.0" layoutY="313.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text layoutX="69.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри персоналу" wrappingWidth="209.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="ACAPchoiceBox" layoutX="144.0" layoutY="424.0" prefHeight="26.0" prefWidth="129.0" />
+      <Text layoutX="44.0" layoutY="427.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ACAP" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <Text layoutX="44.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Можливості аналітика" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="44.0" layoutY="479.0" strokeType="OUTSIDE" strokeWidth="0.0" text="AEXP" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="AEXPchoiceBox" layoutX="144.0" layoutY="483.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="43.0" layoutY="494.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Досвід розробки додатків" wrappingWidth="80.0">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="42.0" layoutY="534.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PCAP" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="PCAPchoiceBox" layoutX="144.0" layoutY="542.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="42.0" layoutY="548.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Можливості програміста" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="40.0" layoutY="588.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PCON" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="PCONchoiceBox" layoutX="145.0" layoutY="599.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="40.0" layoutY="606.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Тривалість роботи персоналу" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="38.0" layoutY="645.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PEXP" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="PEXPchoiceBox" layoutX="145.0" layoutY="652.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="39.0" layoutY="662.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Досвід роботи з платформою" wrappingWidth="70.9367065429688">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="38.0" layoutY="704.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LTEX" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="LTEXchoiceBox" layoutX="145.0" layoutY="709.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="38.0" layoutY="719.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Досвід використання мови програмування" wrappingWidth="102.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="323.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри продукту" wrappingWidth="209.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="316.0" layoutY="421.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RELY" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="RELYchoiceBox" layoutX="419.0" layoutY="424.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="315.0" layoutY="438.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Необхідна надійність програми" wrappingWidth="102.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="316.0" layoutY="482.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DATA" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="DATAchoiceBox" layoutX="420.0" layoutY="483.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="316.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pозмір бази даних" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="316.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPLX" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="CPLXchoiceBox" layoutX="421.0" layoutY="542.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="316.0" layoutY="553.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Складність програми" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="315.0" layoutY="592.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RUSE" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="RUSEchoiceBox" layoutX="422.0" layoutY="599.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="316.0" layoutY="607.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Необхідна можливість багаторазового використання" wrappingWidth="110.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="562.0" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри платформи" wrappingWidth="230.13671875">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="577.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="TIMEchoiceBox" layoutX="665.0" layoutY="430.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="577.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обмеження чсу використання" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="577.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STOR" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="STORchoiceBox" layoutX="665.0" layoutY="490.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="578.0" layoutY="501.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обмеження пам'яті" wrappingWidth="80.0">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="577.0" layoutY="541.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PVOL" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="PVOLchoiceBox" layoutX="665.0" layoutY="549.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="577.0" layoutY="559.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Зміність платформи" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="835.0" layoutY="386.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри проекту" wrappingWidth="209.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="828.0" layoutY="419.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOOL" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="TOOLchoiceBox" layoutX="922.0" layoutY="427.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="827.0" layoutY="434.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bикористання інструментальних програмнихзасобів" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="829.0" layoutY="479.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITE" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="SITEchoiceBox" layoutX="922.0" layoutY="487.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="829.0" layoutY="494.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Багатоабонентська (віддалена) розробка" wrappingWidth="87.7366943359375">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="828.0" layoutY="542.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SCED" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="SCEDchoiceBox" layoutX="922.0" layoutY="546.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="828.0" layoutY="556.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Час, необхідний для виконанняграфіка робіт" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="317.0" layoutY="655.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DOCU" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="DOCUchoiceBox" layoutX="422.0" layoutY="662.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="318.0" layoutY="672.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Відповідність документації потребам життєвого циклу" wrappingWidth="102.39999999999986">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
