--- a/src/main/resources/Fxmls/Cocomo2.fxml
+++ b/src/main/resources/Fxmls/Cocomo2.fxml
@@ -24,12 +24,6 @@
             </Text>
          </children>
       </Pane>
-      <Text layoutX="484.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Тип" wrappingWidth="102.13671875">
-         <font>
-            <Font name="System Bold Italic" size="14.0" />
-         </font>
-      </Text>
-      <ChoiceBox fx:id="choiceBox" layoutX="484.0" layoutY="122.0" prefWidth="150.0" />
       <Text layoutX="181.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Трудомісткість:" wrappingWidth="129.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
@@ -132,7 +126,7 @@
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="323.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри продукту" wrappingWidth="209.33673095703125">
+      <Text layoutX="323.0" layoutY="382.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри продукту" wrappingWidth="209.33673095703125">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
@@ -181,78 +175,78 @@
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="562.0" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри платформи" wrappingWidth="230.13671875">
+      <Text layoutX="564.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри платформи" wrappingWidth="230.13671875">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Text>
-      <Text layoutX="577.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" wrappingWidth="41.33673095703125">
+      <Text layoutX="577.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" wrappingWidth="41.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="TIMEchoiceBox" layoutX="665.0" layoutY="430.0" prefHeight="26.0" prefWidth="130.0" />
-      <Text layoutX="577.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обмеження чсу використання" wrappingWidth="94.13671875">
+      <ChoiceBox fx:id="TIMEchoiceBox" layoutX="665.0" layoutY="422.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="577.0" layoutY="432.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обмеження чсу використання" wrappingWidth="94.13671875">
          <font>
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="577.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STOR" wrappingWidth="41.33673095703125">
+      <Text layoutX="577.0" layoutY="475.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STOR" wrappingWidth="41.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="STORchoiceBox" layoutX="665.0" layoutY="490.0" prefHeight="26.0" prefWidth="130.0" />
-      <Text layoutX="578.0" layoutY="501.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обмеження пам'яті" wrappingWidth="80.0">
+      <ChoiceBox fx:id="STORchoiceBox" layoutX="665.0" layoutY="482.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="578.0" layoutY="493.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обмеження пам'яті" wrappingWidth="80.0">
          <font>
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="577.0" layoutY="541.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PVOL" wrappingWidth="41.33673095703125">
+      <Text layoutX="577.0" layoutY="533.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PVOL" wrappingWidth="41.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="PVOLchoiceBox" layoutX="665.0" layoutY="549.0" prefHeight="26.0" prefWidth="130.0" />
-      <Text layoutX="577.0" layoutY="559.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Зміність платформи" wrappingWidth="94.13671875">
+      <ChoiceBox fx:id="PVOLchoiceBox" layoutX="665.0" layoutY="541.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="577.0" layoutY="551.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Зміність платформи" wrappingWidth="94.13671875">
          <font>
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="835.0" layoutY="386.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри проекту" wrappingWidth="209.33673095703125">
+      <Text layoutX="580.0" layoutY="597.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Папаметри проекту" wrappingWidth="209.33673095703125">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Text>
-      <Text layoutX="828.0" layoutY="419.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOOL" wrappingWidth="41.33673095703125">
+      <Text layoutX="573.0" layoutY="621.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOOL" wrappingWidth="41.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="TOOLchoiceBox" layoutX="922.0" layoutY="427.0" prefHeight="26.0" prefWidth="130.0" />
-      <Text layoutX="827.0" layoutY="434.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bикористання інструментальних програмнихзасобів" wrappingWidth="94.13671875">
+      <ChoiceBox fx:id="TOOLchoiceBox" layoutX="667.0" layoutY="629.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="572.0" layoutY="636.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bикористання інструментальних програмнихзасобів" wrappingWidth="94.13671875">
          <font>
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="829.0" layoutY="479.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITE" wrappingWidth="41.33673095703125">
+      <Text layoutX="574.0" layoutY="681.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITE" wrappingWidth="41.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="SITEchoiceBox" layoutX="922.0" layoutY="487.0" prefHeight="26.0" prefWidth="130.0" />
-      <Text layoutX="829.0" layoutY="494.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Багатоабонентська (віддалена) розробка" wrappingWidth="87.7366943359375">
+      <ChoiceBox fx:id="SITEchoiceBox" layoutX="667.0" layoutY="689.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="574.0" layoutY="696.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Багатоабонентська (віддалена) розробка" wrappingWidth="87.7366943359375">
          <font>
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="828.0" layoutY="542.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SCED" wrappingWidth="41.33673095703125">
+      <Text layoutX="573.0" layoutY="744.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SCED" wrappingWidth="41.33673095703125">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="SCEDchoiceBox" layoutX="922.0" layoutY="546.0" prefHeight="26.0" prefWidth="130.0" />
-      <Text layoutX="828.0" layoutY="556.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Час, необхідний для виконанняграфіка робіт" wrappingWidth="94.13671875">
+      <ChoiceBox fx:id="SCEDchoiceBox" layoutX="667.0" layoutY="748.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="573.0" layoutY="758.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Час, необхідний для виконанняграфіка робіт" wrappingWidth="94.13671875">
          <font>
             <Font name="System Italic" size="10.0" />
          </font>
@@ -268,5 +262,77 @@
             <Font name="System Italic" size="10.0" />
          </font>
       </Text>
+      <ChoiceBox fx:id="choiceBox" layoutX="484.0" layoutY="133.0" prefWidth="150.0" />
+      <Text layoutX="484.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Тип:" wrappingWidth="129.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <Text layoutX="822.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Оцінка рівня чинника " wrappingWidth="200.53668212890625">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="812.0" layoutY="416.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PREC" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="PRECchoiceBox" layoutX="915.0" layoutY="419.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="811.0" layoutY="433.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Наявність досвіду" wrappingWidth="102.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="812.0" layoutY="477.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FLEX" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="FLEXchoiceBox" layoutX="916.0" layoutY="478.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="812.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Гнучкістьпроцесурозробки" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="812.0" layoutY="530.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RESL" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="RESLchoiceBox" layoutX="917.0" layoutY="537.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="812.0" layoutY="548.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Архітектура і дозвілризиків" wrappingWidth="94.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="811.0" layoutY="587.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TEAM" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="TEAMchoiceBox" layoutX="918.0" layoutY="594.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="812.0" layoutY="602.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Спрацьованість команди" wrappingWidth="110.13671875">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="813.0" layoutY="650.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PMAT" wrappingWidth="41.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="PMATchoiceBox" layoutX="918.0" layoutY="657.0" prefHeight="26.0" prefWidth="130.0" />
+      <Text layoutX="814.0" layoutY="667.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Зрілістьпроцесів" wrappingWidth="102.39999999999986">
+         <font>
+            <Font name="System Italic" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="484.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Трудомісткість:" wrappingWidth="129.33673095703125">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Text>
+      <Text fx:id="txtPM1" layoutX="611.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
    </children>
 </AnchorPane>
